OLMIS-2046: Fix horizontal scrollbar in table

--- a/src/openlmis-table/openlmis-table-container.scss
+++ b/src/openlmis-table/openlmis-table-container.scss
@@ -143,6 +143,7 @@ Styleguide 4.1
     }
 
     > .row > .main {
+        overflow: auto;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
